--- a/sass/basic/uiSet.scss
+++ b/sass/basic/uiSet.scss
@@ -12,6 +12,12 @@ button{
 input{
     font-family: 'Noto Serif TC', serif;
 }
+input:not([type*="submit"]):focus,
+input:not([type*="reset"]):focus{
+    /* 輸入框非送出非重整 */
+    outline: none;
+    box-shadow: -2px -2px 3px 3px #ffffff inset,2px 2px 5px 1px #aaaaaaaa inset;
+}
 textarea{
     font-family: 'Noto Serif TC', serif;
 }
@@ -104,8 +110,8 @@ h4{
 }
 /* 內文文字大小 */
 p{  
-    /* font-size: 20px; */
-    font-size:1.25em;
+    /* font-size: 16px; */
+    font-size:1em;
     line-height: 1.3;
     letter-spacing:3px;
 }
@@ -116,8 +122,8 @@ p.small{
 	letter-spacing:2px;
 }
 span{
-    /* font-size: 20px; */
-    font-size:1.25em;
+    /* font-size: 16px; */
+    font-size:1em;
     line-height: 1.3;
     letter-spacing:3px;
 }
