產品頁風格整合修改

--- a/sass/page/_product.scss
+++ b/sass/page/_product.scss
@@ -29,6 +29,18 @@
     width: 25%;
     margin-right: 3%;
 }
+// 主類別＋右分隔線
+.productHead .sideNav .sideNavTitle h2 span{
+    border-right: 1px solid #141414;
+}
+// 次類別色彩刷淡
+.productHead .sideNav ul li a h3{
+    color: #14141480;
+}
+// 次類別 hover色彩
+.productHead .sideNav ul li a h3:hover{
+    color: #394897;
+}
 .productHead .sideNav ul{
     width: 60%;
     display: flex;
@@ -43,18 +55,40 @@
     justify-content: end;
     align-items: center;
 } 
+/* 輸入盒子共用樣式 */
+.productHead .adjustBox .inputBox .inputItem{
+    font-size: 1em;
+    border-radius: 200px;
+    box-sizing: border-box;
+    padding: 0.5em 1em;
+    border:none;
+    box-shadow: -1px -1px 2px 0px #ffffff inset,1px 1px 3px 0px #aaaaaaaa inset;
+    line-height: 2em;
+    background-color: transparent;
+} 
 /* 商品Item共用設計 */
 .productMainSection .commomItem{
     position: relative;
     display: flex;
     flex-direction: column;
+    // 透明卡片
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: #3e444a05;
+    box-shadow: 0.3em 0.3em 0.3em #252b3010;
+    border: 1px solid #94969b50;
+    border-right: 1px solid #55595e20;
+    border-bottom: 1px solid #55595e20;
+    border-left: 1px solid #ffffff10;
+    backdrop-filter: blur(0.5em);
+    border-radius: 0.5em;
 }
 .productMainSection .commomItem .like{
     position: absolute;
-    top: 2%;
-    left: 2%;
+    top: 7%;
+    left: 7%;
     border-radius:800px;
-    width: 25%;
+    width: 20%;
     box-sizing: border-box;
     padding: 3% 0%;
     text-align: center;
@@ -70,7 +104,7 @@
 .productMainSection .commomItem .footer{
     display: flex;
     justify-content: space-between;
-    margin-top: 5%;
+    margin: 3% 0;
 }
 /* 商品輪播 */
 .productMainCarousel{
@@ -89,6 +123,7 @@
     display: flex;
     flex-wrap: nowrap;
     position: relative;
+    padding-bottom: 1em;
 }
 .productMainCarousel .carouselBox .prouductItem{
     width:66%;
@@ -169,6 +204,9 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 0.5%;
+}
+.productiMainProduct .productSection .prouductItem{
+    margin-bottom: 3em;
 }
 /* 篩選器項目 */
 .productiMainProduct .productSelector{
