--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,7 @@
 //登入
 @import 'page/login';
 //客服
-@import 'page/supportChatroom';
+@import 'layout/supportChatroom';
 //商品頁
 @import 'page/product';
 @import 'page/productItem';
