--- a/sass/page/_product.scss
+++ b/sass/page/_product.scss
@@ -1,58 +1,67 @@
 /* 麵包屑和商品分類導覽 */
 .productHead{
     width: 100%;
-    margin-bottom: 10%;
-    margin-top: 60px;
+    margin-bottom: 5%;
+    // border-bottom: 1px solid #8888;
 }
-.productHead .productBread{
-    margin: auto;
-    width: 90%;
-    margin-bottom: 1%;
-}
+// .productHead .productBread{
+//     margin-bottom: 1%;
+// }
+// 主導覽列+input
 .productHead .adjustBox{
-    margin: auto;
-    width: 90%;
-    height: auto;
-    display: flex;
-    justify-content: space-between;
+    display: block;
 }
-.productHead .sideNav{
-    width: 60%;
+// 主導覽列a樣式清除
+.productHead .adjustBox a{
+    text-decoration: none;
+}
+.productHead .adjustBox .sideNav ul{
     display: flex;
     align-items: baseline;
 }
-.productHead .sideNav a{
-    text-decoration: none;
-    color: #141414;
-}
-.productHead .sideNav .sideNavTitle{
-    width: 25%;
-    margin-right: 3%;
+// 第一個li給定位
+.sideNav ul li:first-child{
+    position: relative;
 }
 // 主類別＋右分隔線
-.productHead .sideNav .sideNavTitle h2 span{
-    border-right: 1px solid #141414;
+.productHead .adjustBox .sideNav ul li:first-child::after{
+    content: '';
+    // 定位在.sideNav ul li:first-child
+    position: absolute;
+    right: -10%;
+    top: 0;
+    bottom:0;
+    margin: auto;
+    width: 3px;
+    height: 30%;
+    background-color: #394897;
 }
-// 次類別色彩刷淡
-.productHead .sideNav ul li a h3{
-    color: #14141480;
+.productHead .adjustBox .sideNav ul li+li{
+    margin-left: 6%;
+}
+.productHead .sideNav ul li a{
+    color: #BCBCBC;
+    white-space: nowrap;
 }
 // 次類別 hover色彩
-.productHead .sideNav ul li a h3:hover{
+.productHead .sideNav ul li a:hover{
     color: #394897;
 }
-.productHead .sideNav ul{
-    width: 60%;
-    display: flex;
-}
-.productHead .sideNav ul li{
-    width: 25%;
+@media screen and (min-width:992px){
+    // 主導覽列+input
+    .productHead .adjustBox{
+        display: flex;
+        align-items: baseline;
+    }
+    .productHead .adjustBox .sideNav{
+        flex-grow: 1;
+    }
 }
 /* 輸入盒子 */
 .productHead .adjustBox .inputBox{
-    width: 40%;
-    display: flex;
-    justify-content: end;
+    // width: 40%;
+    // display: flex;
+    // justify-content: end;
     align-items: center;
 } 
 /* 輸入盒子共用樣式 */
@@ -61,7 +70,7 @@
     border-radius: 200px;
     box-sizing: border-box;
     padding: 0.5em 1em;
-    border:none;
+    border:1px solid #ccc;
     box-shadow: -1px -1px 2px 0px #ffffff inset,1px 1px 3px 0px #aaaaaaaa inset;
     line-height: 2em;
     background-color: transparent;
@@ -83,18 +92,71 @@
     backdrop-filter: blur(0.5em);
     border-radius: 0.5em;
 }
+// .productMainSection .commomItem .like{
+//     position: absolute;
+//     top: 7%;
+//     left: 7%;
+//     border-radius:800px;
+//     width: 20%;
+//     box-sizing: border-box;
+//     padding: 3% 0%;
+//     text-align: center;
+//     opacity: 50%;
+//     font-size: 0.5em;
+// }
+// 收藏按鈕
 .productMainSection .commomItem .like{
+    // 定位在.SingleProductIntro .introBox
     position: absolute;
-    top: 7%;
-    left: 7%;
-    border-radius:800px;
-    width: 20%;
-    box-sizing: border-box;
-    padding: 3% 0%;
-    text-align: center;
+    top: 5%;
+    right:2%;
+    display: flex;
+    border-radius:600px;
     opacity: 50%;
-    font-size: 0.5em;
+    box-sizing: border-box;
+    padding: 8px 15px;
+    align-items: center;
+    cursor: pointer;
 }
+// 愛心
+.productMainSection .commomItem .like .pic{
+    width: 20px;
+}
+.productMainSection .commomItem .like .pic img{
+    width: 100%;
+    vertical-align: bottom;
+    transition: .3s;
+}
+// 愛心換顏色
+.productMainSection .commomItem .like .pic img:hover{
+    content: url(../image/articlePage_shareBar_likeHover.png);
+    transform: scale(1.02);
+    vertical-align: bottom;
+}
+.productMainSection .commomItem .like span{
+    margin: 0 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .productMainSection .commomItem .img img{
     width: 100%;
 }
@@ -111,11 +173,14 @@
     width: 100%;
     overflow: hidden;
     margin-bottom: 10%;
+    background-color: #FBF7F3;
+    padding:0 0 3% ;
+    box-sizing: border-box;
 }
 .productMainCarousel h3{
     width: 90%;
-    margin: auto;
-    margin-bottom: 3%;
+    max-width: 1200px;
+    margin: 3% auto;
 }
 .productMainCarousel .carouselBox{
     width: 90%;
@@ -225,7 +290,6 @@
     width: 48%;
     box-sizing: border-box;
     margin-bottom: 1%;
-    
 }
 @media screen and (min-width:992px){
     .productiMainProduct article{
