Modify 1.改變class名稱 close = close3D 2.燈箱圓邊 3.按鈕粗體修掉 4.style.scss 修改scss路徑檔名

--- a/sass/page/_component.scss
+++ b/sass/page/_component.scss
@@ -78,11 +78,11 @@ img {
     justify-content: flex-start;
 }
 
-.bouncingBox .title .close {
+.bouncingBox .title .close3D {
     padding-left: 1em;
 }
 
-.bouncingBox .title .close .fa-times {
+.bouncingBox .title .close3D .fa-times {
     cursor: pointer;
 }
 
@@ -138,7 +138,7 @@ img {
         max-width: 1200px;
         margin: auto;
         max-height: 560px;
-        border-radius: 0px;
+        // border-radius: 0px;
     }
     .customCharacter_bouncing main {
         overflow-y: hidden;
