--- a/sass/page/_3dSurroundView.scss
+++ b/sass/page/_3dSurroundView.scss
@@ -1,6 +1,6 @@
 //會員中心 header 
-.SurroundViewHeader{
-    position: fixed ;
+.SurroundViewHeader {
+    position: fixed;
     right: 0;
     left: 0;
     background-color: transparent;
@@ -8,12 +8,13 @@
     border: none;
     backdrop-filter: none;
     padding: 0;
-    .headerContain{
+    .headerContain {
         //最大寬度 .size 覆蓋
         // max-width: none;
         // width: 100%;
-        .hamburger,.logo{
-            position: fixed ;
+        .hamburger,
+        .logo {
+            position: fixed;
             top: 10px;
             // background-color: #3e444a05;
             box-shadow: 0.1em 0.2em 0.2em #252b3010;
@@ -24,14 +25,14 @@
             background: #eeeeee66;
             backdrop-filter: blur(0.5em);
         }
-        .hamburger{
+        .hamburger {
             right: 10px;
             width: 50px;
             height: 50px;
             aspect-ratio: 1/1;
             border-radius: 50%;
         }
-        .logo{
+        .logo {
             left: 50px;
             padding: 0em 0.5em;
             border-radius: 10px
@@ -220,9 +221,9 @@ div.custom-tooltip span {
         height: 50px;
     }
     /* 電腦版效果顯示*/
-    div.custom-tooltip span {
-        /* visibility: hidden; */
-    }
+    // div.custom-tooltip span {
+    //     visibility: hidden;
+    // }
     div.custom-tooltip:hover span:after {
         content: '';
         position: absolute;
