--- a/sass/page/_myListing.scss
+++ b/sass/page/_myListing.scss
@@ -1,14 +1,15 @@
-.myListing_bouncing main{
+.myListing_bouncing main {
     margin-top: 1em;
-
 }
-.myListing_bouncing main .commodityGroup{
+
+.myListing_bouncing main .commodityGroup {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.myListing_bouncing main .commodityGroup .commodity{
+
+.myListing_bouncing main .commodityGroup .commodity {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -18,58 +19,73 @@
     margin-top: 2em;
 }
 
-.myListing_bouncing main .commodityGroup .commodity:first-child{
+.myListing_bouncing main .commodityGroup .commodity:first-child {
     margin-top: 1em;
 }
 
-.myListing_bouncing main .commodityGroup .commodity:last-child{
+.myListing_bouncing main .commodityGroup .commodity:last-child {
     border-bottom: 0px solid #000;
 }
 
+
 /* 圖文 */
-.myListing_bouncing main .commodityGroup .commodity .graphics{
+
+.myListing_bouncing main .commodityGroup .commodity .graphics {
     position: relative;
 }
-.myListing_bouncing main .commodityGroup .commodity .graphics .love{
+
+.myListing_bouncing main .commodityGroup .commodity .graphics .love {
     background: #eee;
     width: 3em;
     padding: 4px;
     border-radius: 30px;
-    position: absolute; /* .myListing_bouncing main .commodityGroup .commodity .graphics */
+    position: absolute;
+    /* .myListing_bouncing main .commodityGroup .commodity .graphics */
     top: .5em;
     left: 0.5em;
 }
-.myListing_bouncing main .commodityGroup .commodity .graphics p{
+
+.myListing_bouncing main .commodityGroup .commodity .graphics p {
     line-height: 1.5;
 }
 
+
 /* 競標 */
-.myListing_bouncing main .commodityGroup .commodity .bid>*{
+
+.myListing_bouncing main .commodityGroup .commodity .bid>* {
     margin-top: 1em;
 }
-.myListing_bouncing main .commodityGroup .commodity .bid .information{
+
+.myListing_bouncing main .commodityGroup .commodity .bid .information {
     display: flex;
     flex-direction: column;
 }
-.myListing_bouncing main .commodityGroup .commodity .bid .information>*{
+
+.myListing_bouncing main .commodityGroup .commodity .bid .information>* {
     display: flex;
     justify-content: space-between;
 }
-.myListing_bouncing main .commodityGroup .commodity .bid .information .time{
+
+.myListing_bouncing main .commodityGroup .commodity .bid .information .time {
     margin-top: 1em;
     color: #999;
 }
-.myListing_bouncing main .commodityGroup .commodity .bid .information .timeAndButton{
+
+.myListing_bouncing main .commodityGroup .commodity .bid .information .timeAndButton {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
 }
-.myListing_bouncing main .commodityGroup .commodity .bid .information .timeAndButton>*{
+
+.myListing_bouncing main .commodityGroup .commodity .bid .information .timeAndButton>* {
     margin-bottom: 1em;
 }
-.myListing_bouncing main .commodityGroup .commodity .bid .button{
-    font-weight: 900;
+
+.myListing_bouncing main .commodityGroup .commodity .bid .button {
+    // font-weight: 900;
 }
+
+
 /*
 .myListing_bouncing main .commodityGroup .commodity .bid .button:hover{
     background: #fff;
@@ -77,13 +93,13 @@
 */
 
 
-
 /* RWD */
-@media(min-width:769px){
-    .myListing_bouncing main{
+
+@media(min-width:769px) {
+    .myListing_bouncing main {
         margin-top: 1em;
     }
-    .myListing_bouncing main .commodityGroup .commodity{
+    .myListing_bouncing main .commodityGroup .commodity {
         flex-direction: row;
         justify-content: center;
     }
@@ -92,13 +108,13 @@
         width: 40%;
     }
     */
-    .myListing_bouncing main .commodityGroup .commodity .bid{
+    .myListing_bouncing main .commodityGroup .commodity .bid {
         padding-left: 3em;
     }
-    .myListing_bouncing main .commodityGroup .commodity .bid .information .time{
+    .myListing_bouncing main .commodityGroup .commodity .bid .information .time {
         margin-top: 0em;
     }
-    .myListing_bouncing main .commodityGroup .commodity .bid .information{
+    .myListing_bouncing main .commodityGroup .commodity .bid .information {
         flex-direction: row;
         justify-content: space-between;
     }
