1.強制不換行 2.訂單金額拿掉

--- a/sass/page/_3dSurroundView.scss
+++ b/sass/page/_3dSurroundView.scss
@@ -84,33 +84,43 @@
 }
 
 .accountManagement span {
-    width: 65px;
-    margin-left: -14px;
-    margin-top: -70px;
+    text-align: end;
+    width: 5em;
+    margin-left: -17.5px;
+    margin-top: -74px;
+    white-space: nowrap;
 }
 
 .consumptionRecord span {
-    width: 65px;
-    margin-left: -14px;
-    margin-top: -70px;
+    text-align: end;
+    width: 5em;
+    margin-left: -17.5px;
+    margin-top: -74px;
+    white-space: nowrap;
 }
 
 .collect span {
-    width: 65px;
-    margin-left: -14px;
-    margin-top: -70px;
+    text-align: end;
+    width: 5em;
+    margin-left: -17.5px;
+    margin-top: -74px;
+    white-space: nowrap;
 }
 
 .myListing span {
-    width: 65px;
-    margin-left: -14px;
-    margin-top: -70px;
+    text-align: end;
+    width: 5em;
+    margin-left: -17.5px;
+    margin-top: -74px;
+    white-space: nowrap;
 }
 
 .customCharacter span {
-    width: 80px;
-    margin-left: -21.5px;
-    margin-top: -64px;
+    text-align: end;
+    width: 5em;
+    margin-left: -17.5px;
+    margin-top: -74px;
+    white-space: nowrap;
 }
 
 
