網站入口頁面新增

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,8 @@
 @import 'layout/header';
 @import 'layout/headerNormal';
 @import 'layout/footer';
+//前後台入口
+@import 'page/index';
 //首頁
 @import 'page/homePage';
 //關於我們
