--- a/sass/page/_about.scss
+++ b/sass/page/_about.scss
@@ -1,319 +1,76 @@
-@charset "UTF-8";
-.container {
-    max-width: 1200px;
-    margin: auto;
-    box-sizing: border-box;
-}
-.aboutMain .introduceCardWrap .introduceCard, .aboutMain .introduceCardWrapPC .introduceCard {
-    width: 15em;
-    height: 20em;
-    margin: 2em auto;
-    border-radius: 1em;
-    background-color: #3e444a05;
-    box-shadow: 0.1em 0.5em 0.5em #252b3020;
-    box-shadow: 0.1em 0.5em 0.5em #252b3020;
-    border: 1px solid #94969b50;
-    border-right: 1px solid #55595e20;
-    border-bottom: 1px solid #55595e20;
-    border-left: 1px solid #ffffff30;
-    backdrop-filter: blur(0.5em);
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.aboutMain .introduceCardWrap .introduceCard a, .aboutMain .introduceCardWrapPC .introduceCard a {
-    text-decoration: none;
-}
-
-.aboutMain .introduceCardWrap .introduceCard h3, .aboutMain .introduceCardWrapPC .introduceCard h3 {
-    font-size: 5em;
-    position: absolute;
-    top: 0.65em;
-    left: 1.5em;
-    font-weight: 900;
-    color: #14141410;
-}
-
-.aboutMain .introduceCardWrap .introduceCard h2, .aboutMain .introduceCardWrapPC .introduceCard h2 {
-    font-size: 2em;
-    letter-spacing: 0.1ch;
-    line-height: 4;
-    color: #14141480;
-}
-
-.aboutMain .introduceCardWrap .introduceCard p, .aboutMain .introduceCardWrapPC .introduceCard p {
-    color: #14141480;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    line-height: 3em;
-}
-
-.aboutMain .introduceCardWrap .bookshelf, .aboutMain .introduceCardWrapPC .bookshelf {
-    width: 100%;
-    height: 2.5em;
-    display: inline-block;
-    background: #ddb892;
-    position: relative;
-    top: 0em;
-    left: 0;
-}
-
-.aboutMain .introduceCardWrap .bookshelf::before, .aboutMain .introduceCardWrapPC .bookshelf::before {
-    content: '';
-    width: 100%;
-    height: 4em;
-    display: inline-block;
-    background: #e6ccb2;
-    -webkit-transform: scaleY(1.3) perspective(1em) rotateX(1deg);
-    transform: scaleY(1.3) perspective(1em) rotateX(1deg);
-    -webkit-transform-origin: bottom;
-    transform-origin: bottom;
-    position: relative;
-    top: -4em;
-    left: 0;
-}
-
-.aboutMain .flipBookWrap {
-    margin: 10em auto;
-}
-
-.aboutMain .flipBookWrap {
-    -webkit-transition: opacity 0.4s 0.2s;
-    transition: opacity 0.4s 0.2s;
-}
-
-.aboutMain .flipBookWrapCover {
-    background-color: #FFD60A;
-}
-
-.aboutMain .page {
-    width: 40vw;
-    height: 53em;
-    float: left;
-    margin-bottom: 0.5em;
-    padding: 3em 4em;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    line-height: 2;
-}
-.aboutMain .page:nth-child(even) {
-    clear: both;
-}
-
-.aboutMain .flipBookWrap {
-    -webkit-perspective: 250vw;
-    perspective: 250vw;
-}
-
-.aboutMain .flipBookWrap .pages {
-    width: 80vw;
-    height: 53em;
-    position: relative;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    border-radius: 4px;
-}
-
-.aboutMain .flipBookWrap .page {
-    float: none;
-    clear: none;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    width: 40vw;
-    height: 53em;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
-    -webkit-transition: -webkit-transform 1.4s;
-    transition: -webkit-transform 1.4s;
-    transition: transform 1.4s;
-    transition: transform 1.4s, -webkit-transform 1.4s;
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: #f0f0f0;
-    
-}
-
-.aboutMain .flipBookWrap .page::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    -webkit-transition: background 0.7s;
-    transition: background 0.7s;
-    z-index: 2;
-}
-
-.aboutMain .flipBookWrap .page:nth-child(odd) {
-    pointer-events: all;
-    -webkit-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-    right: 0;
-    border-radius: 0 4px 4px 0;
-}
-
-.aboutMain .flipBookWrap .page:nth-child(odd):hover {
-    -webkit-transform: rotateY(-15deg);
-    transform: rotateY(-15deg);
-}
-
-.aboutMain .flipBookWrap .page:nth-child(odd):hover::before {
-    background: rgba(0, 0, 0, 0.03);
-}
-
-.aboutMain .flipBookWrap .page:nth-child(odd)::before {
-    background: rgba(0, 0, 0, 0);
-}
-
-.aboutMain .flipBookWrap .page:nth-child(even) {
-    pointer-events: none;
-    -webkit-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-    -webkit-transform-origin: 100% 0;
-    transform-origin: 100% 0;
-    left: 0;
-    border-radius: 4px 0 0 4px;
-    border-color: #141414;
-}
-
-.aboutMain .flipBookWrap .page:nth-child(even)::before {
-    background: rgba(0, 0, 0, 0.02);
-}
-
-.aboutMain .flipBookWrap .page.grabbing {
-    -webkit-transition: none;
-    transition: none;
-}
-
-.aboutMain .flipBookWrap .page.flipped:nth-child(odd) {
-    pointer-events: none;
-    -webkit-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
-}
-
-.aboutMain .flipBookWrap .page.flipped:nth-child(odd)::before {
-    background: rgba(0, 0, 0, 0.02);
-}
-
-.aboutMain .flipBookWrap .page.flipped:nth-child(even) {
-    pointer-events: all;
-    -webkit-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-}
-
-.aboutMain .flipBookWrap .page.flipped:nth-child(even):hover {
-    -webkit-transform: rotateY(15deg);
-    transform: rotateY(15deg);
-}
-
-.aboutMain .flipBookWrap .page.flipped:nth-child(even):hover::before {
-    background: rgba(0, 0, 0, 0.03);
-}
-
-.aboutMain .flipBookWrap .page.flipped:nth-child(even)::before {
-    background: rgba(0, 0, 0, 0);
-}
-
-.aboutMain .page:nth-child(odd) {
-    background-position: right top;
+.aboutMain{
+    .introduceCardWrap{
+        margin: auto;
+        // 書櫃
+        .bookshelf{
+            width: 100%;
+            height: 2.5em;
+            display: inline-block;
+            background: #ddb892;
+            position: relative;
+            top: 0em;
+            left: 0;
+        }
+        .bookshelf::before {
+            content: '';
+            width: 100%;
+            height: 4em;
+            display: inline-block;
+            background: #e6ccb2;
+            -webkit-transform: scaleY(1.3) perspective(1em) rotateX(1deg);
+            transform: scaleY(1.3) perspective(1em) rotateX(1deg);
+            -webkit-transform-origin: bottom;
+            transform-origin: bottom;
+            position: relative;
+            top: -4em;
+            left: 0;
+        }
+        .raw{
+            background-color: transparent;
+            display: flex;
+            justify-content: center;
+            
+            .introduceCard{
+                border-radius: 1em;
+                background-color: #3e444a05;
+                box-shadow: 0.1em 0.5em 0.5em #252b3020;
+                box-shadow: 0.1em 0.5em 0.5em #252b3020;
+                border: 1px solid #94969b50;
+                border-right: 1px solid #55595e20;
+                border-bottom: 1px solid #55595e20;
+                border-left: 1px solid #ffffff30;
+                backdrop-filter: blur(0.5em);
+                z-index: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                overflow: hidden;
+                cursor: pointer;
+                position: relative;
+                margin: 1em 0;
+                a{
+                    text-decoration: none;
+                    color: #141414;
+                }
+            }
+        }
+    }
 }
 
 /*手機專用*/
 @media screen and (max-width: 767px) {
-    .introduceCardWrapPC {
-        display: none;
-    }
-    .introduceCardWrap {
-        position: relative;
-        margin: 5em auto 10em;
-    }
-    .introduceCardWrap .owl-carousel .owl-nav .owl-prev, .introduceCardWrap .owl-carousel .owl-nav .owl-next {
-        position: relative;
-        display: inline-block;
-        width: 1.5em;
-        height: 1.5em;
-        color: #FFD60A;
-        top: -9em;
-        left: -6em;
-        font-size: 1.5em;
-        border: 1px solid #FFD60A;
-        border-radius: 888em;
-    }
-    .introduceCardWrap .owl-carousel .owl-nav .owl-next {
-        position: relative;
-        display: inline-block;
-        width: 1.5em;
-        height: 1.5em;
-        color: #FFD60A;
-        top: -9em;
-        left: 6em;
-        font-size: 1.5em;
-        border: 1px solid #FFD60A;
-        border-radius: 888em;
-    }
-    .flipBookWrap {
-        display: none;
-    }
-    .introduceCardWrap .bookshelf {
-        width: 90%;
-        height: 2.5em;
-        display: inline-block;
-        background: red;
-        position: relative;
-        top: 0em;
-        left: 5%;
-    }
-    .introduceCardWrap .bookshelf::before {
-        content: '';
-        width: 100%;
-        height: 4em;
-        display: inline-block;
-        background: #e6ccb2;
-        -webkit-transform: scaleY(1.3) perspective(1em) rotateX(1deg);
-        transform: scaleY(1.3) perspective(1em) rotateX(1deg);
-        -webkit-transform-origin: bottom;
-        transform-origin: bottom;
-        position: relative;
-        top: -4em;
-        left: 0;
+    .aboutMain{
+        .introduceCardWrap{
+            .raw{
+                .introduceCard{
+                    margin: 1em 1em;
+                }
+            }
+        }
     }
 }
 
 /* md平板直up */
 @media screen and (min-width: 768px) {
-    .introduceCardWrap {
-        display: none;
-    }
-    .introduceCardWrapPC {
-        display: block;
-    }
-    .introduceCardWrapPC .raw {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-    }
-}
 
-/* lg平板橫up */
-/* xl桌機up */
-/*# sourceMappingURL=about.css.map */
+}
